Condensed backend a lot by using more variables